# privsep-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: simple.rs
log/: Cargo.toml
log/src/: envlogger.rs  lib.rs
privsep/: Cargo.toml
privsep-derive/: Cargo.toml
privsep-derive/src/: lib.rs
privsep/examples/: simple.rs
privsep/src/: error.rs  imsg.rs  lib.rs  main.rs  net.rs  process.rs
privsep/src/net/: ancillary.rs  fd.rs  mod.rs  stream.rs
privsep/tests/: imsg.rs
src/: imsg.rs  lib.rs  process.rs
src/net/: ancillary.rs
tests/: imsg.rs
