[package]
name = "privsep-log"
version = "0.0.1"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "Simple async logging crate inspired by OpenBSD's `log.c`"
repository = "https://github.com/reyk/privsep-rs"
categories = ["os", "os::unix-apis"]
keywords = ["slog", "log", "async", "privsep"]

[dependencies]
derive_more = "0.99"
lazy_static = "1.4.0"
libc = "0.2.92"
log = "0.4.14"
serde = "1.0.124"
serde_derive = "1.0.124"
slog = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
tokio = { version = "1.4.0", features = [ "sync" ] }

[dev-dependencies]
tokio = { version = "1.4.0", features = [ "sync", "rt-multi-thread", "macros", "time" ] }

[features]
debug = [ "slog/max_level_trace" ]
