[package]
name = "privsep-derive"
version = "0.0.1"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "Privilege Separation for Rust"
repository = "https://github.com/reyk/privsep-rs"
categories = ["os", "os::unix-apis"]
keywords = ["fd", "passing", "privsep", "sandbox", "imsg"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.7"
syn = { version = "1.0.54", features = [ "full" ] }
convert_case = "0.4.0"
