[package]
name = "privsep"
version = "0.1.0"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.48"
bincode = "1.3.2"
cfg-if = "1.0.0"
derive_more = "0.99"
futures = "0.3.13"
libc = "0.2.90"
serde = "1.0.124"
serde_derive = "1.0.124"
zerocopy = "^0.3.0" # update after const generic hit stable

[dependencies.tokio]
version = "1.4.0"
features = [ "net", "time", "rt-multi-thread", "macros", "io-util" ]
