[package]
name = "privsep"
version = "0.0.1-test.6"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "Privilege Separation for Rust"
repository = "https://github.com/reyk/privsep-rs"
categories = ["os", "os::unix-apis"]
keywords = ["fd", "passing", "privsep", "sandbox", "imsg"]

[dependencies]
arrayvec = "0.7.0"
async-trait = "0.1.48"
bincode = "1.3.2"
bytes = "1.0.1"
cfg-if = "1.0.0"
close_fds = "0.3.1"
derive_more = "0.99"
libc = "0.2.90"
nix = "0.20.0"
parking_lot = "0.11.1"
serde = "1.0.124"
serde_derive = "1.0.124"
zerocopy = "0.5.0"

[dependencies.tokio]
version = "1.4.0"
features = [ "net", "time", "rt-multi-thread", "macros", "io-util", "signal" ]

[dependencies.privsep-derive]
version = "0.0.1-test.6"
path = "../privsep-derive"

[dependencies.privsep-log]
optional = true
version = "0.0.1-test.2"
path = "../log"

[dev-dependencies.privsep-log]
version = "0.0.1-test.2"
path = "../log"

[[example]]
name = "simple"

[features]
default = []
log = [ "privsep-log" ]
